--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:server": "nodemon --exec babel-node src/server.js --ignore assets/ --ignore src/static",
     "dev:assets": "gulp",
-    "start": "node src/static/js/main.js",
+    "start": "node src/server.js",
     "prestart": "npm run dev:assets && npm run dev:server"
   },
   "repository": {
