--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.12.11",
     "babelify": "^10.0.0",
     "del": "^6.0.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.17.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
